Fixed Ticket #424 Gap between search box and search button in Firefox on iPhone and Android Added a wrapper div to the input box, and specified left, right, and position on that wrapper, rather than the input itself.

--- a/app/common/css/compliant.css
+++ b/app/common/css/compliant.css
@@ -168,6 +168,14 @@ select {
 	padding: 4px 6px;
 	-webkit-appearance:textfield;
 }
+.searchwrapper {
+    position: absolute;
+    left: 0;
+    right: 51px;
+}
+.searchwrapper input {
+    width: 100%;
+}
 
 *:first-child+html .forminput {
 	/* The return of IE CSS hacks makes me mad */
